deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tanks
  namespace: tanks
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.denisrizov.com
      secretName: api-tls
  rules:
    - host: api.denisrizov.com
      http:
        paths:
          - path: /play
            pathType: Prefix
            backend:
              service:
                name: server
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth
                port:
                  number: 8081
